...
    
    public var body: some View {
        ScrollView(.vertical) {
            VStack(spacing: 30) {
                ProfileView(profileImage: Bundle.module.image(fromFileNamed: "KatieLiu"))
                DescriptionView(
                    name: "Katie Liu",
                    title: "B.S. Computer Science and Music",
                    description: Bundle.module.markdown(fromFileNamed: "KatieLiuBio")
                )
                Button {
                    navigationPath.append(KatieLiuDests.moreinfo)
                } label: {
                    Text("More About Me")
                        .bold()
                        .frame(width: 280, height: 50)
                        .foregroundColor(.white)
                        .buttonStyle(.bordered)
                        .background(
                            LinearGradient(
...
