...
    case ananyaVasireddy = "Ananya Vasireddy"
    case sarahBarragan = "Sarah Barragan"
    case caitlinKunchur = "Caitlin Kunchur"
    case sherryXie = "Sherry Xie"
    case andyWang = "Andy Wang"
    case rajPabari = "Raj Pabari"
    case rheaMalhotra = "Rhea Malhotra"
    case natashaKacharia = "Natasha Kacharia"
    case aliMottaghi = "Ali Mottaghi"
    case sonyaJin = "Sonya Jin"
    case hamedHekmat = "Hamed Hekmat"
    case justinWu = "Justin Wu"
    case ashleyGriffin = "Ashley Griffin, Ph.D."
...
