//
// This source file is part of the CS342 2023 Application project
//
// SPDX-FileCopyrightText: 2023 Stanford University
//
// SPDX-License-Identifier: MIT
//

import SwiftUI


public struct NicholasBernhardtLanier: View {
    public var body: some View {
        Text("Nicholas Bernhardt-Lanier")
    }
    
    
    public init() { }
}
