...
                    }
                }
            }
                .navigationDestination(for: Member.self) { member in
                    member.memberView(with: $navigationPath)
                }
                .navigationTitle("CS342")
        }
    }
}


struct MemberList_Previews: PreviewProvider {
...
